# rust-trinary

./: Cargo.toml  README.md
src/: kleene.rs  lib.rs  skeptic.rs  tristate.rs
